# Delivery

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md
Codigos/: EssecontrolMissonDrone.py  Essedepploycontractdrone.py  EssepedeViagem.py  EtherSender.py  cadastraDrone.py  controlDrone.py  controlMission.py  depploycontractdrone.py  etherReceiver.py  interactcontractdrone.py  pedeViagem.py  takeoff_and_land.py
Codigos/Codigos/: CadastrarVeiculo.py  DestinoTwo.py  SmartContractDelivery.py
Codigos/Outros/: Essedepploycontractdrone.py  EssepedeViagem.py  EtherSender.py  comandos.txt  controlDrone.py  interactcontractdrone.py
Codigos/code/: CadastrarVeiculo.py  DestinoOne.py  DestinoThree.py  DestinoTwo.py  SmartContractDelivery.py
